--- a/AKchatApp/src/app/login-page/login-page.component.html
+++ b/AKchatApp/src/app/login-page/login-page.component.html
@@ -39,7 +39,7 @@
 
                 <h4>Enter Password</h4>
 
-                <div class="form-floating mb-3">
+                <div class="mb-3">
 
                 <input formControlName="password" type="password" class="form-control" placeholder="Password" 
                 [class.is-invalid]="submitted && userForm.get('password')?.errors">
