--- a/AKchatApp/src/app/chat/group-chat/group-chat.component.html
+++ b/AKchatApp/src/app/chat/group-chat/group-chat.component.html
@@ -7,7 +7,6 @@
         {{user.username}},
     </div>
 </div>
-
 <div class="modal-body">
     <div class="card users-card">
         <div class="card-header">
@@ -39,3 +38,4 @@
             <app-chat-input (contentemitter)="sendMessage($event)"></app-chat-input>
         </div>
     </div>
+</div>
