--- a/AKchatApp/src/app/chat/group-create/group-create.component.html
+++ b/AKchatApp/src/app/chat/group-create/group-create.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h4 class="modal-title">toUser</h4>
+    <h4 class="modal-title">Group Creating Modal</h4>
     <button type="button" class="btn-close" (click)="activeModal.dismiss('Cross click')"></button>
 </div>
 <div class="modal-body">
