--- a/AKchatApp/src/app/footer/footer.component.html
+++ b/AKchatApp/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="border-dark footer">
+<footer class="border-dark footer" [ngClass]="service.defaulttheme">
     <div class="mt-2 text-center" style="color: white;">
         <h6>Copyright &copy; {{currentYear}} <a class="text-danger">ChatApp</a></h6>
     </div>
