--- a/AKchatApp/src/styles.css
+++ b/AKchatApp/src/styles.css
@@ -1,5 +1,25 @@
-:root{
+
+
+
+
+/* :root{
     --main-color: #07f107;
+    --second-color:#3f51b5;
+} */
+.headergreen{
+ background-color: rgb(25, 135, 84);
+}
+.headerpurple{
+background-color:#3f51b5 ;
+}
+.defaultgreen{
+  background-color: #90ee90;
+}
+.defaultpurple{
+  background-color: #CEC2EB;
+}
+.bg-white{
+  background-color: white;
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
