--- a/AKchatApp/src/app/login-page/login-page.component.html
+++ b/AKchatApp/src/app/login-page/login-page.component.html
@@ -1,10 +1,10 @@
 <div class="text-center mt-5">
-    <h1>Let's Get You Connected And <span class="text-danger"> Chat</span> With Other <span class="text-info">
-            People</span></h1>
+    <h3>Let's Get You Connected And <span class="text-danger"> Chat</span> With Other <span class="text-info">
+            People</span></h3>
 </div>
 
 <div class="text-center mt-3">
-    <h2 class="text-secondary">Log-in to use this app</h2>
+    <h3 class="text-secondary" style="font-weight: 500;">Log-in to use this app</h3>
 </div>
 
 
@@ -68,6 +68,15 @@
                     <a class="" style="text-decoration: none;" [routerLink]="['/register']">Create an account</a>
 
                 </div>
+
+                <div class="d-flex justify-content-center mt-3">
+                    <!-- <p class="noAccount">Don't have an account?</p> -->
+                    <a class="" style="text-decoration: none;color: red;" [routerLink]="['/register']">Forgot
+                        Password ?</a>
+
+                </div>
+
+
             </form>
 
         </main>
