--- a/AKchatApp/src/app/story/story.component.html
+++ b/AKchatApp/src/app/story/story.component.html
@@ -1,7 +1,7 @@
 <div class="story mt-2" style="height: 600px">
-  <div class="stitle" style="display: flex;justify-content: space-around;">
-    <p style="font-size: x-large; font-weight: 500; margin: 0px">Stories</p>
-    <button class="addstory" type="button" (click)="openDialog('300ms', '150ms')">
+  <div class="stitle" style="display: flex;justify-content: space-around;background-color: rgb(25, 135, 84);position: relative;">
+    <p class="storytitle">Stories</p>
+    <button class="addstory" type="button" (click)="openDialog('300ms', '150ms')" style="position: absolute;right: 17px;">
       <i class="bi bi-plus-circle" style="font-size: x-large; color: white;"></i>
     </button>
   </div>
