--- a/AKchatApp/src/app/chat/chat-input/chat-input.component.html
+++ b/AKchatApp/src/app/chat/chat-input/chat-input.component.html
@@ -1,20 +1,18 @@
-
-
-    <form #messageForm="ngForm"  autocomplete="off">
-        <div class="row">
-            <div class="col-9">
-                <input #messageEditor id="mText" type="text" [(ngModel)]="content" required name="content"  class="form-control" placeholder="send message"
-                (input)="onTyping()">
+<form #messageForm="ngForm" autocomplete="off">
+    <div class="row">
+        <div class="col-9">
+            <input #messageEditor id="mText" type="text" [(ngModel)]="content" required name="content"
+                class="form-control" placeholder="send message" (input)="onTyping()">
+        </div>
+        <div class="col-2 btndiv d-flex">
+            <div class="d-grid me-2">
+                <button class="btn btn-success btn-block senbtn" style="height: 34px;" type="submit" (click)="sendMessage()">Send</button>
             </div>
-            <div class="col-2 btndiv d-flex">
-                <div class="d-grid me-2">
-                    <button  class="btn btn-dark btn-block senbtn" type="submit" (click)="sendMessage()">send</button>
-                </div>
-                <div>
-                    <label for="image"> <img class="inputimg" src='/assets/img/upload.png' ></label>
-                    <input id="image" class="d-none" type="file" (change)="onselect($event)" style="opacity: 0;"/>
-                </div>
-                <!-- <div class="position-relative">
+            <div>
+                <label for="image"> <img class="inputimg" src='/assets/img/upload.png'></label>
+                <input id="image" class="d-none" type="file" (change)="onselect($event)" style="opacity: 0;" />
+            </div>
+            <!-- <div class="position-relative">
                     <div class="position-absolute" >
                        
                     </div>
@@ -22,7 +20,6 @@
                         <input type="file" (change)="onselect($event)" style="opacity: 0;"/>
                     </div>
                 </div> -->
-            </div>
         </div>
-    </form> 
-
+    </div>
+</form>
