--- a/AKchatApp/src/app/chat/chatpage/chatpage.component.css
+++ b/AKchatApp/src/app/chat/chatpage/chatpage.component.css
@@ -1,7 +1,7 @@
 
-.mainBody{
+/* .mainBody{
     height: 700px;
-}
+} */
 .pos_dot{
     right:22px;
 }
@@ -29,7 +29,9 @@
 .card-body{
     overflow-y: auto;
 }
-
+.card-header{
+    font-size: 21px;
+}
 .user-list{
     height: 700px;
  
@@ -64,7 +66,9 @@
     background-color: white;
     box-shadow: 3px 3px 13px -3px #888888;
 }
-
+.grptitle{
+    font-size: 21px;
+}
 
 
 .card-body{
@@ -79,8 +83,32 @@
     justify-content: center;
     color:white
 }
+.sidechat{
+    color: white;  border: 2px 2px 2px 2px; 
+    margin-left: auto;
+    border-radius: 10px 10px 10px 10px;
+    font-size: 17px;
+}
+
+.slide:hover {
+  /* box-shadow: inset 12.5em 0 0 0 lightgreen; */
+  background-color:  rgb(25, 135, 84);
+  color: white;
+}
+.slide{
+    /* box-shadow: inset 0 0 0 0 lightgreen; */
+    transition:  0.2s linear;
+}
 .mat-form-field{
     display: block !important;
+}
+.section1{
+    width: 96%;
+    margin-inline: auto;
+}
+.sec1_grp{
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 /* .cdk-overlay-pane{
     top:500px !important;
@@ -107,5 +135,22 @@
         width: 90%;
         margin: auto;
         margin-top: 7px;
+    }
+    .usertag{
+        font-size: 24px;
+    }
+    .sec1_crtgrp{
+        font-size: 22px;
+    }
+  }
+  @media screen  and (max-width:1229px)  {
+    .grptitle{
+        font-size: 16px;
+    }
+    .card-header{
+        font-size: 17px;
+    }
+    .sidechat{
+        font-size: 14px;
     }
   }
