--- a/AKchatApp/src/app/chat/chatpage/chatpage.component.html
+++ b/AKchatApp/src/app/chat/chatpage/chatpage.component.html
@@ -1,17 +1,16 @@
 <div class="container-fluid mt-5 ">
 
 
-    <div class="row mt-3 mainBody">
+    <div class="row mt-3 mainBody" style="margin-bottom: 44px">
         <div class="col-lg-2  ">
-
             <div class="d-grid mb-2 cpbtn">
-                <button [ngClass]="service.defaulttheme" class="btn  btn-block cgroup" (click)="openGroupModal()" type="button"><i
-                        class="bi bi-people-fill" style="font-size: x-large;"></i> &nbsp;Create Group</button>
+                <button [ngClass]="service.defaulttheme" style="padding-top: 3px;padding-bottom: 3px;" class="btn  btn-block cgroup" (click)="openGroupModal()" type="button"><i
+                        class="bi bi-people-fill" style="font-size: 20px;"></i> &nbsp;<span class="grptitle">Create Group</span></button>
             </div>
             <div class="card user-list border-secondary mb-3">
                 <div class="card-header h3 text-center" [ngClass]="service.defaulttheme" style="color: white;">Users
                 </div>
-                <div class="d-flex align-items-center py-2">
+                <div class="d-flex align-items-center py-2" style="    background: #EEEE;border-radius: 22px;margin-top: 11px;margin-bottom: 11px;margin-left: 6px;margin-right: 6px;">
                     <span class="ms-2 pe-2"><i class="bi bi-search"></i></span>
                     <input placeholder="Search Here" matInput [formControl]="searchctrl"
                         (input)="onSearchInputChange1()" />
@@ -24,12 +23,12 @@
                 </div>
                 <div class="card-body ">
                     <ng-container *ngIf="service.offlineUsers.length>0;else noofflineuser">
-                        <div class="row mt-1" *ngFor="let user of service.usernamelist">
+                        <div class="row mt-1 mb-2" *ngFor="let user of service.usernamelist">
                             <div class="col">
                                 <div class="d-grid">
-                                    <button type="button" [disabled]="user.username === service.myName"
-                                        (click)="openPrivateChat(user.username,user.imgstr)"
-                                        class="btn card-text d-flex justify-content-start users"><img
+                                    <button style="padding-top: 10px" type="button" [disabled]="user.username === service.myName"
+                                        (click)="openPrivateChat(user.username,user.imgstr ? user.imgstr:'/assets/img/profile.png')"
+                                        class="btn card-text d-flex justify-content-start users slide"><img
                                             class="user-image me-2"
                                             [src]="user.imgstr ? user.imgstr : '/assets/img/profile.png'" alt="">
                                         {{user.username}}
@@ -66,7 +65,7 @@
         </div>
         <div class="col-lg-8 ">
             <div class="card border-secondary g-chat" style="height:749px;">
-                <div class="card-header h3 text-muted text-center">General Chat</div>
+                <div class="card-header h3 text-muted text-center" style="font-size: 22px;">General Chat</div>
                 <div class="card-body" style="min-height: 500px;background-color: white;">
                     <app-messages [messages]="service.messages"></app-messages>
                 </div>
@@ -78,8 +77,7 @@
         </div>
 
         <div class="col-lg-2 ">
-            <div class="pt-2 pb-2 ps-1 pe-1 text-center mb-2" [ngClass]="service.defaulttheme" style="color: white;  border: 2px 2px 2px 2px;   margin-left: auto;
-            border-radius: 10px 10px 10px 10px;">
+            <div class="pt-2 pb-2 ps-1 pe-1 text-center mb-2 sidechat" [ngClass]="service.defaulttheme" >
                 Please Select User You want to Chat
             </div>
             <mat-form-field>
@@ -118,7 +116,7 @@
                 </mat-select>
             </mat-form-field>
 
-            <button class="text-black bg-warning w-100 ps-1 pe-1 border-0" style="border-radius:5px 5px 5px 5px"
+            <button class="text-black bg-warning w-100 ps-1 pe-1 border-0 pt-2 pb-2" style="border-radius:5px 5px 5px 5px"
                 (click)="onSaveButtonClick()">Selected Users</button>
             <app-story></app-story>
         </div>
@@ -183,11 +181,11 @@
                 <div class="row card-header h3 text-center" [ngClass]="service.defaulttheme" style="color: white;">
                     <div class="col-5 col-sm-5"></div>
                     <div class="d-flex col-7 col-sm-7">
-                        <span class="usertag">Users</span>
+                        <span class="usertag" style="align-self: center;">Users</span>
                         <div class="" style="margin-left: auto;">
-                            <button class="btn  btn-block cgroup" (click)="openGroupModal()" type="button"><i
-                                    class="bi bi-people-fill" style="font-size: x-large;"></i> &nbsp;Create
-                                Group</button>
+                            <button class="btn  btn-block cgroup" (click)="openGroupModal()" type="button" style="padding-top: 3px;padding-bottom: 3px;"><i
+                                    class="bi bi-people-fill" style="font-size: 24px;"></i> &nbsp;<span>Create Group</span>
+                                </button>
                         </div>
                     </div>
 
