--- a/AKchatApp/src/app/chat/messages/messages.component.css
+++ b/AKchatApp/src/app/chat/messages/messages.component.css
@@ -43,7 +43,7 @@
 }
 
 .messagesFromOthers {
-  background-color: #b3bcff;
+  background-color: #50c072;
   padding: 6px;
   padding-inline: 10px;
   border-radius: 7px;
@@ -53,7 +53,7 @@
 }
 
 .messagesFromMe {
-  background-color: #dddddd;
+  background-color: #b7edb6;
   padding: 6px;
   padding-inline: 10px;
   border-radius: 7px;
@@ -211,7 +211,7 @@
     top: -1px;
     right: -10px;
     border: 10px solid transparent;
-    border-top: 10px solid #ccc;
+    border-top: 10px solid #b7edb6;
   }
   
   .right::after {
@@ -230,7 +230,7 @@
    
     padding: 10px 15px;
     border-radius: 6px;
-    border: 1px solid #b3bcff;
+    border: 1px solid #50c072;
     float: right;
    
   }
@@ -241,7 +241,7 @@
     top: -1px;
     left: -10px;
     border: 10px solid transparent;
-    border-top: 10px solid #b3bcff;
+    border-top: 10px solid #50c072;
   }
   
   
