--- a/AKchatApp/src/app/chat/private-chats/private-chats.component.html
+++ b/AKchatApp/src/app/chat/private-chats/private-chats.component.html
@@ -1,23 +1,23 @@
-<div class="modal-header">
+<div class="modal-header" style="background: #50c072;">
     <div class="display">
         <div>
             <button class="touserimgbtn me-3 ms-2" (click)="toggleDivision()"><img class="touserimg"
                     src={{image}}></button>
         </div>
-        <span class="align-self-center" style="font-size: x-large;">
+        <span class="align-self-center" style="font-size: x-large;font-weight: 500;color: white;">
             {{toUser}}
         </span>
     </div>
-    <button type="button" class="btn-close" aria-label="Close" (click)="activeModal.dismiss('Cross click')"></button>
+    <button type="button" class="btn-close bg-white" aria-label="Close" (click)="activeModal.dismiss('Cross click')"></button>
 </div>
 <div *ngIf="divisionVisible" class="my-division">
     <img class="" style=" height: 400px;
   width: 400px;" src={{image}}>
     <button type="button" class="my-division-close btn-close" aria-label="Close" (click)="toggleDivision()"></button>
 </div>
-<div class="modal-body">
-    <div class="card users-card">
-        <div class="card-header">
+<div class="modal-body" style="    padding-top: 0px;">
+    <div class="card users-card" style="border: 0px;">
+        <div class="card-header d-none">
             <h3>Messages</h3>
         </div>
         <div class="card-body card-messages">
@@ -37,7 +37,7 @@
                 <img  [src]="preview" class="rounded p-2" width="100" height="80px">
             </div>    
         </div>
-        <div class="card-footer">
+        <div class="card-footer" style="border: 0px;background: transparent;">
             <app-chat-input (contentemitter)="sendMessage($event)"></app-chat-input>
         </div>
     </div>
