--- a/AKchatApp/src/app/chat/chatpage/chatpage.component.html
+++ b/AKchatApp/src/app/chat/chatpage/chatpage.component.html
@@ -4,13 +4,15 @@
     <div class="row mt-3 mainBody" style="margin-bottom: 44px">
         <div class="col-lg-2  ">
             <div class="d-grid mb-2 cpbtn">
-                <button [ngClass]="service.defaulttheme" style="padding-top: 3px;padding-bottom: 3px;" class="btn  btn-block cgroup" (click)="openGroupModal()" type="button"><i
-                        class="bi bi-people-fill" style="font-size: 20px;"></i> &nbsp;<span class="grptitle">Create Group</span></button>
+                <button [ngClass]="service.defaulttheme" style="padding-top: 3px;padding-bottom: 3px;"
+                    class="btn  btn-block cgroup" (click)="openGroupModal()" type="button"><i class="bi bi-people-fill"
+                        style="font-size: 20px;"></i> &nbsp;<span class="grptitle">Create Group</span></button>
             </div>
             <div class="card user-list border-secondary mb-3">
                 <div class="card-header h3 text-center" [ngClass]="service.defaulttheme" style="color: white;">Users
                 </div>
-                <div class="d-flex align-items-center py-2" style="    background: #EEEE;border-radius: 22px;margin-top: 11px;margin-bottom: 11px;margin-left: 6px;margin-right: 6px;">
+                <div class="d-flex align-items-center py-2"
+                    style="    background: #EEEE;border-radius: 22px;margin-top: 11px;margin-bottom: 11px;margin-left: 6px;margin-right: 6px;">
                     <span class="ms-2 pe-2"><i class="bi bi-search"></i></span>
                     <input placeholder="Search Here" matInput [formControl]="searchctrl"
                         (input)="onSearchInputChange1()" />
@@ -26,7 +28,8 @@
                         <div class="row mt-1 mb-2" *ngFor="let user of service.usernamelist">
                             <div class="col">
                                 <div class="d-grid">
-                                    <button style="padding-top: 10px" type="button" [disabled]="user.username === service.myName"
+                                    <button style="padding-top: 10px" type="button"
+                                        [disabled]="user.username === service.myName"
                                         (click)="openPrivateChat(user.username,user.imgstr ? user.imgstr:'/assets/img/profile.png')"
                                         class="btn card-text d-flex justify-content-start users slide"><img
                                             class="user-image me-2"
@@ -77,7 +80,7 @@
         </div>
 
         <div class="col-lg-2 ">
-            <div class="pt-2 pb-2 ps-1 pe-1 text-center mb-2 sidechat" [ngClass]="service.defaulttheme" >
+            <div class="pt-2 pb-2 ps-1 pe-1 text-center mb-2 sidechat" [ngClass]="service.defaulttheme">
                 Please Select User You want to Chat
             </div>
             <mat-form-field>
@@ -116,8 +119,8 @@
                 </mat-select>
             </mat-form-field>
 
-            <button class="text-black bg-warning w-100 ps-1 pe-1 border-0 pt-2 pb-2" style="border-radius:5px 5px 5px 5px"
-                (click)="onSaveButtonClick()">Selected Users</button>
+            <button class="text-black bg-warning w-100 ps-1 pe-1 border-0 pt-2 pb-2"
+                style="border-radius:5px 5px 5px 5px" (click)="onSaveButtonClick()">Selected Users</button>
             <app-story></app-story>
         </div>
     </div>
@@ -126,128 +129,131 @@
 <div class="tabsbody d-none">
     <mat-tab-group>
         <mat-tab label="Chats">
-            <div class="d-flex justify-content-between p-3 my-3">
-                <div class="w-100 one">
-                    <div class="pt-2 pb-2 ps-1 pe-1 text-center mb-2" [ngClass]="service.defaulttheme" style="color: white;  border: 2px 2px 2px 2px;   margin-left: auto;
+            <div class="section1">
+                <div class="d-flex justify-content-between sec1_grp my-3">
+                    <div class="w-100 one">
+                        <div class="pt-2 pb-2 ps-1 pe-1 text-center mb-2" [ngClass]="service.defaulttheme" style="color: white;  border: 2px 2px 2px 2px;   margin-left: auto;
                         border-radius: 10px 10px 10px 10px;">
-                        Please Select User You want to Chat
-                    </div>
-                    <mat-form-field>
-                        <mat-label>Click here to select:</mat-label>
-                        <mat-select-trigger>
-                            <mat-chip-list>
-                                <mat-chip *ngFor="let user of userControl.value" [removable]="true"
-                                    (removed)="onCatRemoved(user)" color="accent" selected>
-                                    {{ user }}
-                                    <mat-icon matChipRemove>cancel</mat-icon>
-                                </mat-chip>
-                            </mat-chip-list>
-                        </mat-select-trigger>
-                        <mat-select class="forbox" [formControl]="userControl" multiple placeholder="Add User...">
-                            <div class="d-flex align-items-center p-2">
-                                <span class="ms-2"><i class="bi bi-search"></i></span>
-                                <input class="ps-2 mt-1 mb-1 border-bottom" style="width: fit-content"
-                                    placeholder="Write here name " matInput [formControl]="userctrl"
-                                    (input)="onSearchInputChange()" />
-                            </div>
-
-                            <ng-container *ngIf="filteredlist.length > 0; else nouser">
-                                <ng-container style="top:200px" *ngFor="let user of filteredlist">
-                                    <mat-option *ngIf="user!==service.myName" [value]="user">
-                                        {{user}}
-                                    </mat-option>
-                                </ng-container>
-                            </ng-container>
-                            <ng-template #nouser>
-                                <div class="p-2">
-                                    No result for <span class="fw-bolder">"{{userctrl.value}}"</span> found
+                            Please Select User You want to Chat
+                        </div>
+                        <mat-form-field>
+                            <mat-label>Click here to select:</mat-label>
+                            <mat-select-trigger>
+                                <mat-chip-list>
+                                    <mat-chip *ngFor="let user of userControl.value" [removable]="true"
+                                        (removed)="onCatRemoved(user)" color="accent" selected>
+                                        {{ user }}
+                                        <mat-icon matChipRemove>cancel</mat-icon>
+                                    </mat-chip>
+                                </mat-chip-list>
+                            </mat-select-trigger>
+                            <mat-select class="forbox" [formControl]="userControl" multiple placeholder="Add User...">
+                                <div class="d-flex align-items-center p-2">
+                                    <span class="ms-2"><i class="bi bi-search"></i></span>
+                                    <input class="ps-2 mt-1 mb-1 border-bottom" style="width: fit-content"
+                                        placeholder="Write here name " matInput [formControl]="userctrl"
+                                        (input)="onSearchInputChange()" />
                                 </div>
 
-                            </ng-template>
-                        </mat-select>
-                    </mat-form-field>
-                    <button class="text-black bg-warning w-100 ps-1 pe-1 border-0 p-1"
-                        style="border-radius:5px 5px 5px 5px" (click)="onSaveButtonClick()">Selected Users</button>
-                </div>
-                <!-- <div class="second d-none">
+                                <ng-container *ngIf="filteredlist.length > 0; else nouser">
+                                    <ng-container style="top:200px" *ngFor="let user of filteredlist">
+                                        <mat-option *ngIf="user!==service.myName" [value]="user">
+                                            {{user}}
+                                        </mat-option>
+                                    </ng-container>
+                                </ng-container>
+                                <ng-template #nouser>
+                                    <div class="p-2">
+                                        No result for <span class="fw-bolder">"{{userctrl.value}}"</span> found
+                                    </div>
+
+                                </ng-template>
+                            </mat-select>
+                        </mat-form-field>
+                        <button class="text-black bg-warning w-100 ps-1 pe-1 border-0 p-1"
+                            style="border-radius:5px 5px 5px 5px" (click)="onSaveButtonClick()">Selected Users</button>
+                    </div>
+                    <!-- <div class="second d-none">
                     <div class="d-grid mb-2 mt-2 cpbtn">
                         <button class="btn  btn-block cgroup" (click)="openGroupModal()" type="button"><i
                                 class="bi bi-people-fill" style="font-size: x-large;"></i> &nbsp;Create Group</button>
                     </div>
                   </div> -->
 
-            </div>
-            <div class="card user-list border-secondary mb-3">
-                <div class="row card-header h3 text-center" [ngClass]="service.defaulttheme" style="color: white;">
-                    <div class="col-5 col-sm-5"></div>
-                    <div class="d-flex col-7 col-sm-7">
-                        <span class="usertag" style="align-self: center;">Users</span>
-                        <div class="" style="margin-left: auto;">
-                            <button class="btn  btn-block cgroup" (click)="openGroupModal()" type="button" style="padding-top: 3px;padding-bottom: 3px;"><i
-                                    class="bi bi-people-fill" style="font-size: 24px;"></i> &nbsp;<span>Create Group</span>
+                </div>
+                <div class="card user-list border-secondary mb-3">
+                    <div class="row card-header h3 text-center" [ngClass]="service.defaulttheme" style="color: white;">
+                        <div class="col-5 col-sm-5"></div>
+                        <div class="d-flex col-7 col-sm-7">
+                            <span class="usertag" style="align-self: center;">Users</span>
+                            <div class="" style="margin-left: auto;">
+                                <button class="btn  btn-block cgroup" (click)="openGroupModal()" type="button"
+                                    style="padding-top: 3px;padding-bottom: 3px;"><i class="bi bi-people-fill"
+                                        style="font-size: 24px;"></i> &nbsp;<span class="sec1_crtgrp">Create Group</span>
                                 </button>
+                            </div>
                         </div>
+
+
+                    </div>
+                    <div class="d-flex align-items-center py-2">
+                        <span class="ms-2 pe-2"><i class="bi bi-search"></i></span>
+                        <input placeholder="Search Here" matInput [formControl]="searchctrl"
+                            (input)="onSearchInputChange1()" />
                     </div>
 
-
-                </div>
-                <div class="d-flex align-items-center py-2">
-                    <span class="ms-2 pe-2"><i class="bi bi-search"></i></span>
-                    <input placeholder="Search Here" matInput [formControl]="searchctrl"
-                        (input)="onSearchInputChange1()" />
-                </div>
-
-                <div *ngIf="service.usernamelist.length===0 && service.groupnamelist.length===0 && searchctrl.value!==''"
-                    class="py-2">
-                    <span class="p-2">
-                        No result for <span class="fw-bolder">"{{searchctrl.value}}"</span>found
-                    </span>
-                </div>
-                <div class="card-body ">
-                    <ng-container *ngIf="service.offlineUsers.length>0;else noofflineuser">
-                        <div class="row mt-1" *ngFor="let user of service.usernamelist">
+                    <div *ngIf="service.usernamelist.length===0 && service.groupnamelist.length===0 && searchctrl.value!==''"
+                        class="py-2">
+                        <span class="p-2">
+                            No result for <span class="fw-bolder">"{{searchctrl.value}}"</span>found
+                        </span>
+                    </div>
+                    <div class="card-body ">
+                        <ng-container *ngIf="service.offlineUsers.length>0;else noofflineuser">
+                            <div class="row mt-1" *ngFor="let user of service.usernamelist">
+                                <div class="col">
+                                    <div class="d-grid">
+                                        <button type="button" [disabled]="user.username === service.myName"
+                                            (click)="openPrivateChat(user.username,user.imgstr)"
+                                            class="btn card-text d-flex justify-content-start users"><img
+                                                class="user-image me-2"
+                                                [src]="user.imgstr ? user.imgstr : '/assets/img/profile.png'" alt="">
+                                            {{user.username}}
+                                            <span *ngIf="user.username === service.myName"> (you)</span> <span
+                                                class="fw-bolder text-primary"
+                                                *ngIf="user.username===service.username && service.isTyping">typing...</span>
+                                            <span class="position-absolute pos_dot"
+                                                *ngIf="service.onlineUsers.includes(user.username)">
+                                                <div class="onlinesign"></div>
+                                            </span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </ng-container>
+                        <ng-template #noofflineuser>
+                            <span>Please Select Users You want to Chat with</span>
+                        </ng-template>
+                        <!-- for groups -->
+                        <div class="row mt-1" *ngFor="let grp of service.groupnamelist">
                             <div class="col">
                                 <div class="d-grid">
-                                    <button type="button" [disabled]="user.username === service.myName"
-                                        (click)="openPrivateChat(user.username,user.imgstr)"
-                                        class="btn card-text d-flex justify-content-start users"><img
-                                            class="user-image me-2"
-                                            [src]="user.imgstr ? user.imgstr : '/assets/img/profile.png'" alt="">
-                                        {{user.username}}
-                                        <span *ngIf="user.username === service.myName"> (you)</span> <span
-                                            class="fw-bolder text-primary"
-                                            *ngIf="user.username===service.username && service.isTyping">typing...</span>
-                                        <span class="position-absolute pos_dot"
-                                            *ngIf="service.onlineUsers.includes(user.username)">
-                                            <div class="onlinesign"></div>
-                                        </span>
+                                    <button (click)="openGroupChat(grp.groupname)" type="button"
+                                        class="btn card-text  btn-group mt-1">
+                                        <i class="bi bi-people-fill ms-2" style="font-size: large;"></i> &nbsp;
+                                        {{grp.groupname}}
                                     </button>
                                 </div>
                             </div>
                         </div>
-                    </ng-container>
-                    <ng-template #noofflineuser>
-                        <span>Please Select Users You want to Chat with</span>
-                    </ng-template>
-                    <!-- for groups -->
-                    <div class="row mt-1" *ngFor="let grp of service.groupnamelist">
-                        <div class="col">
-                            <div class="d-grid">
-                                <button (click)="openGroupChat(grp.groupname)" type="button"
-                                    class="btn card-text  btn-group mt-1">
-                                    <i class="bi bi-people-fill ms-2" style="font-size: large;"></i> &nbsp;
-                                    {{grp.groupname}}
-                                </button>
-                            </div>
-                        </div>
+                        <!-- for groups ends -->
+
+
+
+
                     </div>
-                    <!-- for groups ends -->
-
-
-
 
                 </div>
-
             </div>
         </mat-tab>
         <mat-tab label="GeneralChat">
