reset password done

--- a/AKchatApp/src/app/confirm-password/confirm-password.component.html
+++ b/AKchatApp/src/app/confirm-password/confirm-password.component.html
@@ -3,17 +3,15 @@
         <main class="form-signin" style="box-shadow: 7px 7px 10px #b7b7b7;">
             <form [formGroup]="newPass" (ngSubmit)="submitForm()" autocomplete="off" class="p-3 border">
                 <p class="mb-3 mt-3 text-center" style=" color: grey;">Enter your Email here</p>
-
-                <!-- <h4>Choose your name</h4> -->
+                <!-- 
                 <div class=" mb-3 d-flex" style="border: solid rgb(185, 185, 185) 1px;border-radius: 5px;">
                     <i class="bi bi-person-fill"
                         style="font-size: x-large;border-right: solid rgb(185, 185, 185) 1px;padding: 5px;"></i>
 
-                    <!-- <input style="padding: 0px;" matInput formControlName="email"> -->
                     <input formControlName="otp" name="otp" type="text" class="form-control " style="border: 0px;"
                         placeholder="Enter your OTP">
 
-                </div>
+                </div> -->
 
                 <div class=" mb-3 d-flex" style="border: solid rgb(185, 185, 185) 1px;border-radius: 5px;">
                     <i class="bi bi-person-fill"
