--- a/AKchatApp/src/app/forget-password/forget-password.component.html
+++ b/AKchatApp/src/app/forget-password/forget-password.component.html
@@ -3,6 +3,12 @@
         <main class="form-signin" style="box-shadow: 7px 7px 10px #b7b7b7;">
             <form [formGroup]="forget" (ngSubmit)="submitForm()" autocomplete="off" class="p-3 border">
                 <p class="mb-3 mt-3 text-center" style=" color: grey;">Enter your Email here</p>
+                <span class="text-danger" *ngIf="submitted && forget.get('email')?.hasError('required')">
+                    Please Enter Email...
+                </span>
+                <div *ngIf="forget.hasError('NoUser')">
+                    <p class="text-danger">Email does not exists...</p>
+                </div>
 
 
 
