--- a/AKchatApp/src/app/header/header.component.css
+++ b/AKchatApp/src/app/header/header.component.css
@@ -249,3 +249,115 @@ input[type=checkbox]:checked~.sidebarIconToggle>.diagonal.part-2 {
 
 }
 
+
+
+
+/* search */
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: #04AA6D;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  /* Dropdown button on hover & focus */
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: #3e8e41;
+  }
+  
+  /* The search field */
+  #myInput {
+    box-sizing: border-box;
+    /* background-image: url('searchicon.png'); */
+    background-position: 14px 12px;
+    background-repeat: no-repeat;
+    font-size: 16px;
+    padding: 14px 20px 12px 45px;
+    border: none;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  /* The search field when it gets focus/clicked on */
+  #myInput:focus {outline: 3px solid #ddd;}
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f6f6f6;
+    min-width: 230px;
+    border: 1px solid #ddd;
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+  .show {display:block;}
+
+
+
+
+
+
+  /* search */
+
+  .input-container {
+    display: flex;
+    align-items: center;
+    padding: 5px; /* Adjust this value to control the vertical position */
+  }
+  
+  /* Adjust the vertical position of the input field */
+  .input-container input {
+    margin-top: 5px; /* Adjust this value to control the vertical position */
+  }
+
+
+/* new */
+
+.dropdown-content {
+    position: absolute;
+    top: 0;
+    right: 0; /* Initially position it outside the visible area */
+    width: 0; /* Initially, set the width to 0 */
+    height: 100%;
+    background-color: #f1f1f1;
+    overflow: hidden;
+    transition: width 0.5s; /* Add a transition for the width property */
+  }
+  
+  .show {
+    width: 250px; /* Adjust the width according to your design */
+  }
+  
+  /* .search-input {
+    position: absolute;
+    bottom: 1px;
+    height: 20px;
+    transition: right 1s; 
+  }
+  
+  .show .search-input {
+    right: 0; 
+  }
+   */
